include/openswmm/legacy/engine/openswmm_solver.h


typedef enum
{
    swmm_GAGE,
    swmm_SUBCATCH,
    swmm_NODE,
    swmm_LINK,
    swmm_POLLUTANT,
    swmm_LANDUSE,
    swmm_TIME_PATTERN,
    swmm_CURVE,
    swmm_TIMESERIES,
    swmm_CONTROL_RULE,
    swmm_TRANSECT,
    swmm_AQUIFER,
    swmm_UNIT_HYDROGRAPH,
    swmm_SNOWPACK,
    smmm_XSECTION_SHAPE,
    swmm_LID,
    swmm_STREET,
    swmm_INLET,
    swmm_SYSTEM = 100
} swmm_Object;
typedef enum
{
    swmm_JUNCTION = 0,
    swmm_OUTFALL = 1,
    swmm_STORAGE = 2,
    swmm_DIVIDER = 3
} swmm_NodeType;
typedef enum
{
    swmm_CONDUIT = 0,
    swmm_PUMP = 1,
    swmm_ORIFICE = 2,
    swmm_WEIR = 3,
    swmm_OUTLET = 4
} swmm_LinkType;
typedef enum
{
    swmm_GAGE_TOTAL_PRECIPITATION = 100,
    swmm_GAGE_RAINFALL,
    swmm_GAGE_SNOWFALL,
    swmm_GAGE_SCALEFACTOR,
} swmm_GageProperty;
typedef enum
{
    swmm_SUBCATCH_AREA = 200,
    swmm_SUBCATCH_RAINGAGE,
    swmm_SUBCATCH_RAINFALL,
    swmm_SUBCATCH_EVAP,
    swmm_SUBCATCH_INFIL,
    swmm_SUBCATCH_RUNOFF,
    swmm_SUBCATCH_RPTFLAG,
    swmm_SUBCATCH_WIDTH,
    swmm_SUBCATCH_SLOPE,
    swmm_SUBCATCH_OUTLET_TYPE,
    swmm_SUBCATCH_OUTLET_INDEX,
    swmm_SUBCATCH_INFILTRATION_MODEL,
    swmm_SUBCATCH_FRACTION_IMPERVIOUS,
    swmm_SUBCATCH_SUB_AREA_ROUTE_TO,
    swmm_SUBCATCH_SUB_AREA_FRACTION_OUTLET,
    swmm_SUBCATCH_SUB_AREA_MANNINGS_N,
    swmm_SUBCATCH_SUB_AREA_FRACTION_AREA,
    swmm_SUBCATCH_SUB_AREA_DEPRESSION_STORAGE,
    swmm_SUBCATCH_SUB_AREA_INFLOW,
    swmm_SUBCATCH_SUB_AREA_RUNOFF,
    swmm_SUBCATCH_SUB_AREA_DEPTH,
    swmm_SUBCATCH_LID_UNITS_COUNT,
    swmm_SUBCATCH_LID_UNITS_PERV_AREA,
    swmm_SUBCATCH_LID_UNITS_FLOW_TO_PERV_AREA,
    swmm_SUBCATCH_LID_UNITS_DRAIN_FLOW,
    swmm_SUBCATCH_LID_UNIT_REPLICATES,
    swmm_SUBCATCH_LID_UNIT_AREA,
    swmm_SUBCATCH_LID_UNIT_FULL_WIDTH,
    swmm_SUBCATCH_LID_UNIT_BOTTOM_WIDTH,
    swmm_SUBCATCH_LID_UNIT_INIT_SATURATION,
    swmm_SUBCATCH_LID_UNIT_FROM_IMPERVIOUS,
    swmm_SUBCATCH_LID_UNIT_FROM_PERVIOUS,
    swmm_SUBCATCH_LID_UNIT_TO_PERVIOUS,
    swmm_SUBCATCH_LID_UNIT_RECEIVING_OUTLET_TYPE,
    swmm_SUBCATCH_LID_UNIT_RECEIVING_OUTLET_INDEX,
    swmm_SUBCATCH_LID_UNIT_SURFACE_DEPTH,
    swmm_SUBCATCH_LID_UNIT_SOIL_MOISTURE,
    swmm_SUBCATCH_LID_UNIT_GREEN_AMPT_CAPILLARY_SUCTION,
    swmm_SUBCATCH_LID_UNIT_GREEN_AMPT_SATURATED_CONDUCTIVITY,
    swmm_SUBCATCH_LID_UNIT_GREEN_AMPT_MAXIMUM_SOIL_MOISTURE_DEFICIT,
    swmm_SUBCATCH_CURB_LENGTH,
    swmm_SUBCATCH_API_RAINFALL,
    swmm_SUBCATCH_API_SNOWFALL,
    swmm_SUBCATCH_POLLUTANT_BUILDUP,
    swmm_SUBCATCH_EXTERNAL_POLLUTANT_BUILDUP,
    swmm_SUBCATCH_POLLUTANT_RUNOFF_CONCENTRATION,
    swmm_SUBCATCH_POLLUTANT_PONDED_CONCENTRATION,
    swmm_SUBCATCH_POLLUTANT_TOTAL_LOAD,
    swmm_SUBCATCH_API_PET,
    swmm_SUBCATCH_GW_MOISTURE,
    swmm_SUBCATCH_GW_LOWER_DEPTH,
    swmm_SUBCATCH_SNOW_SWE,
    swmm_SUBCATCH_SNOW_FW,
    swmm_SUBCATCH_SNOW_ATI,
    swmm_SUBCATCH_SNOW_COLDC,
} swmm_SubcatchProperty;
typedef enum
{
    swmm_NODE_TYPE = 300,
    swmm_NODE_ELEV,
    swmm_NODE_MAXDEPTH,
    swmm_NODE_DEPTH,
    swmm_NODE_HEAD,
    swmm_NODE_VOLUME,
    swmm_NODE_LATFLOW,
    swmm_NODE_INFLOW,
    swmm_NODE_OVERFLOW,
    swmm_NODE_RPTFLAG,
    swmm_NODE_SURCHARGE_DEPTH,
    swmm_NODE_PONDED_AREA,
    swmm_NODE_INITIAL_DEPTH,
    swmm_NODE_POLLUTANT_CONCENTRATION,
    swmm_NODE_POLLUTANT_LATMASS_FLUX,
    swmm_NODE_OUTFLOW,
} swmm_NodeProperty;
typedef enum
{
    swmm_LINK_TYPE = 400,
    swmm_LINK_NODE1 = 401,
    swmm_LINK_NODE2 = 402,
    swmm_LINK_LENGTH = 403,
    swmm_LINK_SLOPE = 404,
    swmm_LINK_FULLDEPTH = 405,
    swmm_LINK_FULLFLOW = 406,
    swmm_LINK_SETTING = 407,
    swmm_LINK_TIMEOPEN = 408,
    swmm_LINK_TIMECLOSED = 409,
    swmm_LINK_FLOW = 410,
    swmm_LINK_DEPTH = 411,
    swmm_LINK_VELOCITY = 412,
    swmm_LINK_TOPWIDTH = 413,
    swmm_LINK_VOLUME = 414,
    swmm_LINK_CAPACITY = 415,
    swmm_LINK_RPTFLAG = 416,
    swmm_LINK_OFFSET1 = 417,
    swmm_LINK_OFFSET2 = 418,
    swmm_LINK_INITIAL_FLOW = 419,
    swmm_LINK_FLOW_LIMIT = 420,
    swmm_LINK_INLET_LOSS = 421,
    swmm_LINK_OUTLET_LOSS = 422,
    swmm_LINK_AVERAGE_LOSS = 423,
    swmm_LINK_SEEPAGE_RATE = 424,
    swmm_LINK_HAS_FLAPGATE = 425,
    swmm_LINK_POLLUTANT_CONCENTRATION = 426,
    swmm_LINK_POLLUTANT_LOAD = 427,
    swmm_LINK_POLLUTANT_LATMASS_FLUX = 428,
} swmm_LinkProperty;
typedef enum
{
    swmm_STARTDATE = 0,
    swmm_CURRENTDATE = 1,
    swmm_ELAPSEDTIME = 2,
    swmm_ROUTESTEP = 3,
    swmm_MAXROUTESTEP = 4,
    swmm_REPORTSTEP = 5,
    swmm_TOTALSTEPS = 6,
    swmm_NOREPORT = 7,
    swmm_FLOWUNITS = 8,
    swmm_ENDDATE = 9,
    swmm_REPORTSTART = 10,
    swmm_UNITSYSTEM = 11,
    swmm_SURCHARGEMETHOD = 12,
    swmm_ALLOWPONDING = 13,
    swmm_INERTIADAMPING = 14,
    swmm_NORMALFLOWLTD = 15,
    swmm_SKIPSTEADYSTATE = 16,
    swmm_IGNORERAINFALL = 17,
    swmm_IGNORERDII = 18,
    swmm_IGNORESNOWMELT = 19,
    swmm_IGNOREGROUNDWATER = 20,
    swmm_IGNOREROUTING = 21,
    swmm_IGNOREQUALITY = 22,
    swmm_ERROR_CODE = 23,
    swmm_RULESTEP = 24,
    swmm_SWEEPSTART = 25,
    swmm_SWEEPEND = 26,
    swmm_MAXTRIALS = 27,
    swmm_NUMTHREADS = 28,
    swmm_MINROUTESTEP = 29,
    swmm_LENGTHENINGSTEP = 30,
    swmm_STARTDRYDAYS = 31,
    swmm_COURANTFACTOR = 32,
    swmm_MINSURFAREA = 33,
    swmm_MINSLOPE = 34,
    swmm_RUNOFFERROR = 35,
    swmm_FLOWERROR = 36,
    swmm_QUALERROR = 37,
    swmm_HEADTOL = 38,
    swmm_SYSFLOWTOL = 39,
    swmm_LATFLOWTOL = 40,
    swmm_EVAPRATE = 41,
    swmm_TEMPERATURE = 42,
    swmm_API_TEMPERATURE = 43,
    swmm_WINDSPEED = 44,
    swmm_API_WINDSPEED = 45,
    swmm_API_EVAP = 46,
    swmm_EVAP_DRY_ONLY = 47,
} swmm_SystemProperty;