python/openswmm/legacy/engine/solver.pxd

# Description: Cython module for openswmmcore solver
# Created by: Caleb Buahin (EPA/ORD/CESER/WID)
# Created on: 2024-11-19

# cython: language_level=3

# cython imports
from cpython.datetime cimport datetime as cython_datetime

# third-party imports

# project imports

# Define the number of days since 01/01/00
cpdef double encode_swmm_datetime(cython_datetime pdatetime)

# Define the number of days since 01/01/00
cpdef cython_datetime decode_swmm_datetime(double swmm_datetime)

cdef extern from "Python.h":
    object PyObject_CallObject(object, object)

cdef extern from "time.h":
    ctypedef long clock_t
    clock_t clock()

cdef extern from "openswmm_solver.h":
    # SWMM object type enumeration
    ctypedef enum swmm_Object:
        swmm_GAGE      # Rain gage
        swmm_SUBCATCH         # Subcatchment
        swmm_NODE             # Junction
        swmm_LINK             # Conduit
        swmm_AQUIFER         # Aquifers
        swmm_SNOWPACK         # Snowpack
        swmm_UNIT_HYDROGRAPH # Unit hydrographs
        swmm_LID              # Low impact development
        swmm_STREET          # Streets
        swmm_INLET           # Inlets
        swmm_TRANSECT        # Transects
        smmm_XSECTION_SHAPE   # Cross-section shape
        swmm_CONTROL_RULE    # Control rules
        swmm_POLLUTANT       # Pollutants
        swmm_LANDUSE         # Land uses
        swmm_CURVE            # Curve
        swmm_TIMESERIES       # Time series
        swmm_TIME_PATTERN     # Time pattern
        swmm_SYSTEM           # General

    # SWMM node type enumeration
    ctypedef enum swmm_NodeType:
        swmm_JUNCTION  # Junction node
        swmm_OUTFALL   # Outfall node
        swmm_STORAGE   # Storage node
        swmm_DIVIDER   # Divider node

    # SWMM link type enumeration
    ctypedef enum swmm_LinkType:
        swmm_CONDUIT   # Conduit link
        swmm_PUMP      # Pump link
        swmm_ORIFICE   # Orifice link
        swmm_WEIR      # Weir link
        swmm_OUTLET    # Outlet link

    # SWMM Rain Gage properties
    ctypedef enum swmm_GageProperty:
        swmm_GAGE_TOTAL_PRECIPITATION # Total precipitation
        swmm_GAGE_RAINFALL          # Snow depth
        swmm_GAGE_SNOWFALL            # Snowfall
        swmm_GAGE_SCALEFACTOR         # Rainfall scaling factor
    
    # SWMM Subcatchment properties
    ctypedef enum swmm_SubcatchProperty:
        swmm_SUBCATCH_AREA      # Area
        swmm_SUBCATCH_RAINGAGE  # Rain gage
        swmm_SUBCATCH_RAINFALL  # Rainfall
        swmm_SUBCATCH_EVAP      # Evaporation
        swmm_SUBCATCH_INFIL     # Infiltration
        swmm_SUBCATCH_RUNOFF    # Runoff
        swmm_SUBCATCH_RPTFLAG   # Reporting flag
        swmm_SUBCATCH_WIDTH     # Width
        swmm_SUBCATCH_SLOPE     # Slope
        swmm_SUBCATCH_OUTLET_TYPE  # Outlet type
        swmm_SUBCATCH_OUTLET_INDEX  # Outlet index
        swmm_SUBCATCH_INFILTRATION_MODEL  # Infiltration model
        swmm_SUBCATCH_FRACTION_IMPERVIOUS  # Fraction impervious
        swmm_SUBCATCH_SUB_AREA_ROUTE_TO  # Subarea routing to
        swmm_SUBCATCH_SUB_AREA_FRACTION_OUTLET  # Fraction subarea routed to outlet
        swmm_SUBCATCH_SUB_AREA_MANNINGS_N  # Subarea Manning's n
        swmm_SUBCATCH_SUB_AREA_FRACTION_AREA  # Subarea fraction area
        swmm_SUBCATCH_SUB_AREA_DEPRESSION_STORAGE  # Subarea depression storage
        swmm_SUBCATCH_SUB_AREA_INFLOW  # Subarea inflow
        swmm_SUBCATCH_SUB_AREA_RUNOFF  # Subarea runoff
        swmm_SUBCATCH_SUB_AREA_DEPTH  # Subarea depth
        swmm_SUBCATCH_LID_UNITS_COUNT  # LID unit count
        swmm_SUBCATCH_LID_UNITS_PERV_AREA  # LID pervious area
        swmm_SUBCATCH_LID_UNITS_FLOW_TO_PERV_AREA  # LID flow to pervious area
        swmm_SUBCATCH_LID_UNITS_DRAIN_FLOW  # LID drain flow
        swmm_SUBCATCH_LID_UNIT_REPLICATES  # LID unit replicates
        swmm_SUBCATCH_LID_UNIT_AREA  # LID unit area
        swmm_SUBCATCH_LID_UNIT_FULL_WIDTH  # LID unit full width
        swmm_SUBCATCH_LID_UNIT_BOTTOM_WIDTH  # LID unit bottom width
        swmm_SUBCATCH_LID_UNIT_INIT_SATURATION  # LID unit initial saturation
        swmm_SUBCATCH_LID_UNIT_FROM_IMPERVIOUS  # LID unit from impervious
        swmm_SUBCATCH_LID_UNIT_FROM_PERVIOUS  # LID unit from pervious
        swmm_SUBCATCH_LID_UNIT_TO_PERVIOUS  # LID unit to pervious
        swmm_SUBCATCH_LID_UNIT_RECEIVING_OUTLET_TYPE  # LID unit receiving outlet type
        swmm_SUBCATCH_LID_UNIT_RECEIVING_OUTLET_INDEX  # LID unit receiving outlet index
        swmm_SUBCATCH_LID_UNIT_SURFACE_DEPTH  # LID unit surface depth
        swmm_SUBCATCH_LID_UNIT_SOIL_MOISTURE  # LID unit soil moisture
        swmm_SUBCATCH_LID_UNIT_GREEN_AMPT_CAPILLARY_SUCTION  # LID unit Green-Ampt capillary suction
        swmm_SUBCATCH_LID_UNIT_GREEN_AMPT_SATURATED_CONDUCTIVITY  # LID unit Green-Ampt saturated conductivity
        swmm_SUBCATCH_LID_UNIT_GREEN_AMPT_MAXIMUM_SOIL_MOISTURE_DEFICIT  # LID unit Green-Ampt max soil moisture deficit
        swmm_SUBCATCH_CURB_LENGTH # Curb length
        swmm_SUBCATCH_API_RAINFALL # API rainfall
        swmm_SUBCATCH_API_SNOWFALL # API snowfall
        swmm_SUBCATCH_POLLUTANT_BUILDUP # Pollutant buildup
        swmm_SUBCATCH_EXTERNAL_POLLUTANT_BUILDUP # External pollutant buildup
        swmm_SUBCATCH_POLLUTANT_RUNOFF_CONCENTRATION # Pollutant ponded concentration
        swmm_SUBCATCH_POLLUTANT_PONDED_CONCENTRATION # Pollutant runoff concentration
        swmm_SUBCATCH_POLLUTANT_TOTAL_LOAD # Pollutant total load
        swmm_SUBCATCH_API_PET # API prescribed potential evapotranspiration rate
        swmm_SUBCATCH_GW_MOISTURE # Groundwater upper zone moisture content
        swmm_SUBCATCH_GW_LOWER_DEPTH # Groundwater saturated zone depth
        swmm_SUBCATCH_SNOW_SWE # Snow pack SWE on a snow subarea
        swmm_SUBCATCH_SNOW_FW # Snow pack free water on a snow subarea
        swmm_SUBCATCH_SNOW_ATI # Snow pack antecedent temperature index
        swmm_SUBCATCH_SNOW_COLDC # Snow pack cold content

    # SWMM Node properties
    ctypedef enum swmm_NodeProperty:
        swmm_NODE_TYPE     # Node type
        swmm_NODE_ELEV     # Elevation
        swmm_NODE_MAXDEPTH # Max. depth
        swmm_NODE_DEPTH    # Depth
        swmm_NODE_HEAD     # Hydraulic head
        swmm_NODE_VOLUME   # Volume
        swmm_NODE_LATFLOW  # Lateral inflow
        swmm_NODE_INFLOW   # Total inflow
        swmm_NODE_OVERFLOW # Flooding
        swmm_NODE_RPTFLAG  # Reporting flag
        swmm_NODE_SURCHARGE_DEPTH # Surcharge depth
        swmm_NODE_PONDED_AREA   # Ponded area
        swmm_NODE_INITIAL_DEPTH # Initial depth
        swmm_NODE_POLLUTANT_CONCENTRATION # Pollutant concentration
        swmm_NODE_POLLUTANT_LATMASS_FLUX  # Pollutant lateral mass flux
        swmm_NODE_OUTFLOW                 # Total outflow

    # SWMM Link properties
    ctypedef enum swmm_LinkProperty:
        swmm_LINK_TYPE       # Link type
        swmm_LINK_NODE1      # Start node
        swmm_LINK_NODE2      # End node
        swmm_LINK_LENGTH     # Length
        swmm_LINK_SLOPE      # Slope 
        swmm_LINK_FULLDEPTH  # Full depth
        swmm_LINK_FULLFLOW   # Full flow
        swmm_LINK_SETTING    # Setting
        swmm_LINK_TIMEOPEN   # Time open
        swmm_LINK_TIMECLOSED # Time closed
        swmm_LINK_FLOW       # Flow
        swmm_LINK_DEPTH      # Depth
        swmm_LINK_VELOCITY   # Velocity
        swmm_LINK_TOPWIDTH   # Top width
        swmm_LINK_VOLUME     # Volume
        swmm_LINK_CAPACITY   # Capacity
        swmm_LINK_RPTFLAG    # Reporting flag
        swmm_LINK_OFFSET1    # Inlet offset
        swmm_LINK_OFFSET2    # Outlet offset
        swmm_LINK_INITIAL_FLOW # Initial flow
        swmm_LINK_FLOW_LIMIT # Flow limit
        swmm_LINK_INLET_LOSS # Inlet loss
        swmm_LINK_OUTLET_LOSS # Outlet loss
        swmm_LINK_AVERAGE_LOSS # Average depth
        swmm_LINK_SEEPAGE_RATE # Seepage rate
        swmm_LINK_HAS_FLAPGATE # Flap gate
        swmm_LINK_POLLUTANT_CONCENTRATION  # Pollutant concentration
        swmm_LINK_POLLUTANT_LOAD # Pollutant load
        swmm_LINK_POLLUTANT_LATMASS_FLUX # Pollutant lateral mass flux

    # SWMM System properties
    ctypedef enum swmm_SystemProperty:
        swmm_STARTDATE           # The start date of the simulation.
        swmm_CURRENTDATE         # The current date in the simulation.
        swmm_ELAPSEDTIME         # The elapsed time since the start of the simulation.
        swmm_ROUTESTEP           # The routing step size.
        swmm_MAXROUTESTEP        # The maximum routing step size.
        swmm_REPORTSTEP          # The reporting step size.
        swmm_TOTALSTEPS          # The total number of steps in the simulation.
        swmm_NOREPORT            # Flag indicating whether reporting is disabled.
        swmm_FLOWUNITS           # The flow units used in the simulation.
        swmm_ENDDATE             # The end date of the simulation.
        swmm_REPORTSTART         # The start date of the reporting period.
        swmm_UNITSYSTEM          # The unit system used in the simulation.
        swmm_SURCHARGEMETHOD     # The surcharge method used in the simulation.
        swmm_ALLOWPONDING        # Flag indicating whether ponding is allowed.
        swmm_INERTIADAMPING      # The inertia damping factor used in the simulation.
        swmm_NORMALFLOWLTD       # The normal flow limited flag.
        swmm_SKIPSTEADYSTATE     # Flag indicating whether steady state periods are skipped.
        swmm_IGNORERAINFALL      # Flag indicating whether rainfall is ignored.
        swmm_IGNORERDII          # Flag indicating whether RDII is ignored.
        swmm_IGNORESNOWMELT      # Flag indicating whether snowmelt is ignored.
        swmm_IGNOREGROUNDWATER   # Flag indicating whether groundwater is ignored.
        swmm_IGNOREROUTING       # Flag indicating whether routing is ignored.
        swmm_IGNOREQUALITY       # Flag indicating whether water quality is ignored.
        swmm_ERROR_CODE          # The error code.
        swmm_RULESTEP            # The rule step size.
        swmm_SWEEPSTART          # The start date of the sweep start.
        swmm_SWEEPEND            # The end date of the sweep end.
        swmm_MAXTRIALS           # The maximum number of trials.
        swmm_NUMTHREADS          # The number of threads used in the simulation.
        swmm_MINROUTESTEP        # The minimum routing step size.
        swmm_LENGTHENINGSTEP     # The lengthening step size.
        swmm_STARTDRYDAYS        # The number of start dry days.
        swmm_COURANTFACTOR       # The Courant factor.
        swmm_MINSURFAREA         # The minimum surface area.
        swmm_MINSLOPE            # The minimum slope.
        swmm_RUNOFFERROR         # The runoff error.
        swmm_FLOWERROR           # The flow error.
        swmm_QUALERROR           # The quality error.
        swmm_HEADTOL             # The head tolerance.
        swmm_SYSFLOWTOL          # The system flow tolerance.
        swmm_LATFLOWTOL          # The lateral flow tolerance.
        swmm_EVAPRATE            # The current climate-derived evaporation rate (read-only).
        swmm_TEMPERATURE         # The current air temperature (read-only).
        swmm_API_TEMPERATURE     # API prescribed air temperature.
        swmm_WINDSPEED           # The current wind speed (read-only).
        swmm_API_WINDSPEED       # API prescribed wind speed.
        swmm_API_EVAP            # API prescribed system-wide evaporation rate.
        swmm_EVAP_DRY_ONLY       # Evaporation DRY_ONLY option.
